--- a/PhD/Exacto/2024/2024-201/2024-201_ANOVA Control 21DAT.Rmd
+++ b/PhD/Exacto/2024/2024-201/2024-201_ANOVA Control 21DAT.Rmd
@@ -117,7 +117,7 @@ plot(emm_herb_rate, adjust = "tukey", comparisons = T, CIs = F, alpha = 0.1,  ho
   scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
     labels = scales::percent_format(scale = 100, suffix = "")) +
   labs(#title = "Waterhemp Biomass Reduction - POST", 
-       x = "Control (%)", 
+       x = "Control 21 DAT (%)", 
        y = "Treatment") +
   facet_grid(~ rate, labeller = label_both) +
   theme_bw() + 
