--- a/PhD/Exacto/2024/2024-202/2024-202_ANOVA Control 28DAT.Rmd
+++ b/PhD/Exacto/2024/2024-202/2024-202_ANOVA Control 28DAT.Rmd
@@ -148,14 +148,14 @@ plot(emm_rate, adjust = "tukey", comparisons = T, CIs = F, alpha = 0.1,  horizon
     labels = scales::percent_format(scale = 100, suffix = "")) +
   labs(#title = "Waterhemp Biomass Reduction - POST", 
        x = "Control 28 DAT (%)", 
-       y = "Rate") +
+       y = "Herbicide Rate") +
   #facet_grid(~ rate, labeller = label_both) +
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 18, colour = "darkgreen"), 
          axis.title = element_text(face = "bold", size = 18, colour = "darkgreen"), 
          axis.text= element_text(face = "bold", size = 14, colour = "black"),
          strip.text = element_text(face = "bold", size = 13, colour = "black")) +
-  ggsave("2024-202_ANOVA Control 28DAT_Rate.tiff", units="in", width = 8, height = 6, dpi = 600, compression = "lzw")
+  ggsave("2024-202_ANOVA Control 28DAT_RATE.tiff", units="in", width = 8, height = 6, dpi = 600, compression = "lzw")
 
 
 ```
