--- a/PhD/Exacto/2024/2024-204/2024-203_ANOVA Control 28DAT.Rmd
+++ b/PhD/Exacto/2024/2024-204/2024-203_ANOVA Control 28DAT.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Exacto 2024-202 ANOVA Biored"
+title: "Exacto 2024-203 ANOVA Control 28 DAT"
 author: "Felipe Faleco"
 date: "2024-04-11"
 output: html_document
@@ -15,7 +15,8 @@ library(glmmTMB)
 library(DHARMa)
 library(emmeans)
 library(ggplot2)
-
+library(multcomp)
+library(multcompView)
 
 ```
 
@@ -24,10 +25,10 @@ library(ggplot2)
 
 ```{r}
 
-data <- read.csv("Data Sheet_2024-202.csv")
+data <- read.csv("Data Sheet_2024-203.csv")
 
 
-data <- data %>% filter(rate == "630" | rate == "1260")
+data <- data %>% filter(rate == "535" | rate == "1070")
 
 
 str(data)
@@ -52,8 +53,7 @@ str(data)
 
 ```{r}
 
-model <- glmmTMB(biored ~ herb * rate, data = data, family = beta_family())
-
+model <- glmmTMB(ve_28dat ~ herb * rate, data = data, family = beta_family())
 
 ```
 
@@ -65,7 +65,9 @@ model <- glmmTMB(biored ~ herb * rate, data = data, family = beta_family())
 
 summary(model)
 
+
 resid <- simulateResiduals(model)
+
 
 plot(resid)
 
@@ -109,7 +111,6 @@ CLD_emm_rate <- if(requireNamespace("multcomp")) {
 
 CLD_emm_rate
 
-
 ```
 
 
@@ -121,20 +122,20 @@ CLD_emm_rate
 
 plot(emm_herb, adjust = "tukey", comparisons = T, CIs = F, alpha = 0.1,  horizontal = T) + 
   geom_point(size = 2) +
-  geom_text(aes(label = c("a", "a", "ab", "a", "ab", "ab", "b", "a")),
+  geom_text(aes(label = c("ab", "a", "abc", "ab", "ab", "bc", "c", "ab")),
             vjust = -0.8, size = 4) +
   scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
     labels = scales::percent_format(scale = 100, suffix = "")) +
   labs(#title = "Waterhemp Biomass Reduction - POST", 
-       x = "Biomass Reduction 28 DAT (%)", 
+       x = "Control 28 DAT (%)", 
        y = "Treatment") +
   #facet_grid(~ rate, labeller = label_both) +
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 18, colour = "darkgreen"), 
          axis.title = element_text(face = "bold", size = 18, colour = "darkgreen"), 
-         axis.text= element_text(face = "bold", size = 14, colour = "black")) +
-         #strip.text = element_text(face = "bold", size = 13, colour = "black")) +
-  ggsave("2024-202_ANOVA Biored_HERB.tiff", units="in", width = 8, height = 6, dpi = 600, compression = "lzw")
+         axis.text= element_text(face = "bold", size = 14, colour = "black"),
+         strip.text = element_text(face = "bold", size = 13, colour = "black")) +
+  ggsave("2024-202_ANOVA Control 28DAT_HERB.tiff", units="in", width = 8, height = 6, dpi = 600, compression = "lzw")
 
 
 
@@ -146,15 +147,15 @@ plot(emm_rate, adjust = "tukey", comparisons = T, CIs = F, alpha = 0.1,  horizon
   scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
     labels = scales::percent_format(scale = 100, suffix = "")) +
   labs(#title = "Waterhemp Biomass Reduction - POST", 
-       x = "Biomass Reduction 28 DAT (%)", 
+       x = "Control 28 DAT (%)", 
        y = "Herbicide Rate") +
   #facet_grid(~ rate, labeller = label_both) +
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 18, colour = "darkgreen"), 
          axis.title = element_text(face = "bold", size = 18, colour = "darkgreen"), 
-         axis.text= element_text(face = "bold", size = 14, colour = "black")) +
-         #strip.text = element_text(face = "bold", size = 13, colour = "black")) +
-  ggsave("2024-202_ANOVA Biored_RATE.tiff", units="in", width = 8, height = 6, dpi = 600, compression = "lzw")
+         axis.text= element_text(face = "bold", size = 14, colour = "black"),
+         strip.text = element_text(face = "bold", size = 13, colour = "black")) +
+  ggsave("2024-202_ANOVA Control 28DAT_RATE.tiff", units="in", width = 8, height = 6, dpi = 600, compression = "lzw")
 
 
 ```
