--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/2023/Mesotrione_Absolute ED/MIs_Mesotrione Only_GC_A101_ DR Biomass.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/2023/Mesotrione_Absolute ED/MIs_Mesotrione Only_GC_A101_ DR Biomass.Rmd
@@ -86,20 +86,20 @@ mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL.4(), L
 # Lower IC, which actually is AIC (default), indicates the best model to be used. On the other hand, the highest the Lack of Fit, better the model. The two-, three-, and four-parameter log-logistic models are are symmetrical around the inflection point (parameter "e") while others (e.g. fiveparameter log-logistic, Gompertz, and Weibull) are asymmetrical. In symmetrical models, the parameter "e" and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter "e" does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. Therefore, in asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.LL2.3<- drm(biomass ~ rate, temp, fct = LL2.3(), data = data.A101.meso, type = "continuous")
+model.LL.3 <- drm(biomass ~ rate, temp, fct = LL.3(), data = data.A101.meso, type = "continuous")
 
 
-plot(fitted(model.LL2.3), residuals(model.LL2.3))
+plot(fitted(model.LL.3), residuals(model.LL.3))
 
-qqnorm(residuals(model.LL2.3))
+qqnorm(residuals(model.LL.3))
 
                 
-modelFit(model.LL2.3)
+modelFit(model.LL.3)
 
-summary(model.LL2.3) 
+summary(model.LL.3) 
 
 
-anova(model.LL2.3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
+anova(model.LL.3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
 
 ```
 
@@ -112,9 +112,9 @@ anova(model.LL2.3, model.LL4) # p-value > 0.05 means that there is no difference
 #ED(model.W1.3, c(50), type = "relative", interval = "delta")
 
 
-ED50.elevated <- ED(model.LL2.3, (summary(model.LL2.3)$coefficients[3, 1] * 0.5), clevel = "elevated", type = "absolute", interval = "delta", logBase = exp(1))
+ED50.elevated <- ED(model.LL.3, (summary(model.LL.3)$coefficients[3, 1] * 0.5), clevel = "elevated", type = "absolute", interval = "delta")
 
-ED50.ambient <- ED(model.LL2.3, (summary(model.LL2.3)$coefficients[4, 1] * 0.5), clevel = "ambient", type = "absolute", interval = "delta", logBase = exp(1))
+ED50.ambient <- ED(model.LL.3, (summary(model.LL.3)$coefficients[4, 1] * 0.5), clevel = "ambient", type = "absolute", interval = "delta")
 
 
 # If the model was a Log-logistic (log(ED50) as parameter) E.g.: LL2.3,  we should use logBase = exp(1). Eg: ED50.A82 <- ED(model.LL2.3, (summary(model.LL2.3)$coefficients[5, 1] * 0.5), clevel = "A82", type = "absolute", interval = "delta", logBase = exp(1))
@@ -129,21 +129,21 @@ ED50.ambient <- ED(model.LL2.3, (summary(model.LL2.3)$coefficients[4, 1] * 0.5),
 #EDcomp(model.W1.3, c(50, 50), type = "relative", interval = "none", reverse = F)
 
 
-EDcomp(model.LL2.3, c((summary(model.LL2.3)$coefficients[4, 1] * 0.5),
-                     (summary(model.LL2.3)$coefficients[3, 1] * 0.5)), 
-       compMatch = c("elevated", "ambient"), type = "absolute", interval = "none", logBase = exp(1), reverse = T)
+EDcomp(model.LL.3, c((summary(model.LL.3)$coefficients[4, 1] * 0.5),
+                     (summary(model.LL.3)$coefficients[3, 1] * 0.5)), 
+       compMatch = c("elevated", "ambient"), type = "absolute", interval = "none", reverse = T)
 
 
 # Comparing b parameter (slope)
-compParm(model.LL2.3, strVal = "b", operator = "-")
+compParm(model.LL.3, strVal = "b", operator = "-")
 
 
 # Comparing d parameter (upper limit)
-compParm(model.LL2.3, strVal = "d", operator = "-")
+compParm(model.LL.3, strVal = "d", operator = "-")
 
 
 # Comparing e parameter (Infletion Point)
-compParm(model.LL2.3, strVal = "e", operator = "-") # Remember that for asymmetric models, the parameter"e" does not reflect the ED50. 
+compParm(model.LL.3, strVal = "e", operator = "-") # Remember that for asymmetric models, the parameter"e" does not reflect the ED50. 
 
 
 ```
@@ -161,7 +161,7 @@ tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD
 par(mar = c(5,5,1,1))
 
 
-plot(model.LL2.3,
+plot(model.LL.3,
      type = "average",
      xlab = expression(paste("Mesotrione rate (g ai ha"^-1, ")")),
      ylab = expression(paste("A101 biomass (g plant"^-1, ")")),
@@ -179,8 +179,8 @@ plot(model.LL2.3,
 
 points(x = c(ED50.elevated[1, 1],
              ED50.ambient[1, 1]),
-       y = c((summary(model.LL2.3)$coefficients[3, 1]/2), 
-             (summary(model.LL2.3)$coefficients[4, 1]/2)),
+       y = c((summary(model.LL.3)$coefficients[3, 1]/2), 
+             (summary(model.LL.3)$coefficients[4, 1]/2)),
        pch = 8,
        cex = 1.3)
 
