--- a/PhD/PhD Projects/Giant Ragweed/AT12/Lactofen/AT2_Lac_DR Biomass.Rmd
+++ b/PhD/PhD Projects/Giant Ragweed/AT12/Lactofen/AT2_Lac_DR Biomass.Rmd
@@ -113,6 +113,11 @@ ED50.AT2 <- ED(model.W2.3, (summary(model.W2.3)$coefficients[3, 1] * 0.5), cleve
 ED50.AT8.EDGE <- ED(model.W2.3, (summary(model.W2.3)$coefficients[4, 1] * 0.5), clevel = "AT15", type = "absolute", interval = "delta")
 
 
+ED50.AT2 <- ED(model.W2.3, (summary(model.W2.3)$coefficients[3, 1] * 0.1), clevel = "AT12", type = "absolute", interval = "delta")
+
+ED50.AT8.EDGE <- ED(model.W2.3, (summary(model.W2.3)$coefficients[4, 1] * 0.1), clevel = "AT15", type = "absolute", interval = "delta")
+
+
 
 # If the model was a Log-logistic (log(ED50) as parameter) E.g.: LL2.3,  we should use logBase = exp(1).
 
@@ -128,6 +133,12 @@ ED50.AT8.EDGE <- ED(model.W2.3, (summary(model.W2.3)$coefficients[4, 1] * 0.5), 
 
 EDcomp(model.W2.3, c((summary(model.W2.3)$coefficients[3, 1] * 0.5),
                      (summary(model.W2.3)$coefficients[4, 1] * 0.5)), 
+       compMatch = c("AT12", "AT15"), type = "absolute", interval = "none", reverse = F)
+
+
+
+EDcomp(model.W2.3, c((summary(model.W2.3)$coefficients[3, 1] * 0.1),
+                     (summary(model.W2.3)$coefficients[4, 1] * 0.1)), 
        compMatch = c("AT12", "AT15"), type = "absolute", interval = "none", reverse = F)
 
 
