--- a/PhD/PhD Projects/Waterhemp/Bill Stangel_A92/2023/PRE/Flumioxazin/A92_PRE_Flumi_DR Percentcounts.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Bill Stangel_A92/2023/PRE/Flumioxazin/A92_PRE_Flumi_DR Percentcounts.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Waterhemp PRE A92 Flumioxazin DR Counts"
 author: "Felipe Faleco"
-date: "03/13/2024"
+date: "08/07/2024"
 output:
   html_document:
     df_print: paged
@@ -87,20 +87,19 @@ mselect(model.LL.4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL.4(), 
 
 
 
-model.W1.3 <- drm(percentcount ~ rate, pop, fct = W1.3(),  data = data, type = "continuous")
+model.W1.2 <- drm(percentcount ~ rate, pop, fct = W1.2(),  data = data, type = "continuous")
 
-plot(fitted(model.W1.3), residuals(model.W1.3))
+plot(fitted(model.W1.2), residuals(model.W1.2))
 
-qqnorm(residuals(model.W1.3))
-
-
-modelFit(model.W1.3)
-
-summary(model.W1.3)
+qqnorm(residuals(model.W1.2))
 
 
+modelFit(model.W1.2)
 
-anova(model.W1.3, model.LL.4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
+summary(model.W1.2)
+
+
+anova(model.W1.2, model.LL.4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
 
 ```
 
@@ -113,9 +112,9 @@ anova(model.W1.3, model.LL.4) # p-value > 0.05 means that there is no difference
 #ED(model.W1.3, c(50), type = "relative", interval = "delta")
 
 
-ED50.A92 <- ED(model.W1.3, (summary(model.W1.3)$coefficients[3, 1] * 0.5), clevel = "A92", type = "absolute", interval = "delta")
+ED50.A92 <- ED(model.W1.2, 0.5 , clevel = "A92", type = "absolute", interval = "delta")
 
-ED50.A66 <- ED(model.W1.3, (summary(model.W1.3)$coefficients[4, 1] * 0.5), clevel = "A66", type = "absolute", interval = "delta")
+ED50.A66 <- ED(model.W1.2, 0.5, clevel = "A66", type = "absolute", interval = "delta")
 
 
 ```
@@ -128,22 +127,21 @@ ED50.A66 <- ED(model.W1.3, (summary(model.W1.3)$coefficients[4, 1] * 0.5), cleve
 #EDcomp(model.W1.3, c(50, 50), type = "relative", interval = "none", reverse = F)
 
 
-EDcomp(model.W1.3, c((summary(model.W1.3)$coefficients[4, 1] * 0.5),
-                     (summary(model.W1.3)$coefficients[3, 1] * 0.5)), 
+EDcomp(model.W1.2, c(0.5, 0.5), 
        compMatch = c("A92", "A66"), type = "absolute", interval = "none", reverse = T)
 
 
 
 # Comparing b parameter (slope)
-compParm(model.W1.3, strVal = "b", operator = "-")
+compParm(model.W1.2, strVal = "b", operator = "-")
 
 
 # Comparing d parameter (upper limit)
-compParm(model.W1.3, strVal = "d", operator = "-")
+#compParm(model.W1.2, strVal = "d", operator = "-")
 
 
 # Comparing e parameter (Infletion Point)
-compParm(model.W1.3, strVal = "e", operator = "-") # Remember that for assymetric models, the paramenter"e" does not reflect the ED50. 
+compParm(model.W1.2, strVal = "e", operator = "-") # Remember that for assymetric models, the paramenter"e" does not reflect the ED50. 
 
 
 ```
@@ -161,26 +159,25 @@ tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD
 par(mar = c(5,5,1,1))
 
 
-plot(model.W1.3,
+plot(model.W1.2,
      type = "average",
      xlab = expression(paste("Flumioxazin rate (g ai ha"^-1, ")")),
-     ylab = expression(paste("Plant Density (%)")),
-     ylim = c(0, 100),
+     ylab = expression(paste("Plant Counts (%)")),
+     ylim = c(0, 1),
      col = c("red", "darkgreen"),
      pch = c(19, 17),
      cex = 1.5,
      cex.axis = 1.3,
      cex.lab = 1.9,
      cex.legend = 2.0,
-     legendPos = c(800, 100),
+     legendPos = c(800, 1.0),
      lwd = 1.5)
 
 
 
 points(x = c(ED50.A92[1, 1], 
              ED50.A66[1, 1]),
-       y = c((summary(model.W1.3)$coefficients[3, 1] * 0.5), 
-             (summary(model.W1.3)$coefficients[4, 1] * 0.5)),
+       y = c(0.5, 0.5),
        pch = 8,
        cex = 1.3)
 
