--- a/PhD/PhD Projects/Waterhemp/Bill Stangel_A92/2023/PRE/Flumioxazin/A92_PRE_Flumi_DR Countred.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Bill Stangel_A92/2023/PRE/Flumioxazin/A92_PRE_Flumi_DR Countred.Rmd
@@ -26,8 +26,6 @@ library(dplyr)
 
 data <- read.csv("Data Sheet_A92_Flumioxazin PRE.csv")
 
-#data <- data %>% filter(rate != "0")
-
 str(data)
 
 
@@ -89,20 +87,19 @@ mselect(model.LL.4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL.4(), 
 
 
 
-model.W2.3 <- drm(countred ~ rate, pop, fct = W2.3(),  data = data, type = "continuous")
+model.W2.2 <- drm(countred ~ rate, pop, fct = W2.2(),  data = data, type = "continuous")
 
-plot(fitted(model.W2.3), residuals(model.W2.3))
+plot(fitted(model.W2.2), residuals(model.W2.2))
 
-qqnorm(residuals(model.W2.3))
-
-
-modelFit(model.W2.3)
-
-summary(model.W2.3)
+qqnorm(residuals(model.W2.2))
 
 
+modelFit(model.W2.2)
 
-anova(model.W2.3, model.LL.4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
+summary(model.W2.2)
+
+
+anova(model.W2.2, model.LL.4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
 
 ```
 
@@ -115,9 +112,9 @@ anova(model.W2.3, model.LL.4) # p-value > 0.05 means that there is no difference
 #ED(model.W1.3, c(50), type = "relative", interval = "delta")
 
 
-ED50.A92 <- ED(model.W2.3, (summary(model.W2.3)$coefficients[3, 1] * 0.5), clevel = "A92", type = "absolute", interval = "delta")
+ED50.A92 <- ED(model.W2.2, 0.5, clevel = "A92", type = "absolute", interval = "delta")
 
-ED50.A66 <- ED(model.W2.3, (summary(model.W2.3)$coefficients[4, 1] * 0.5), clevel = "A66", type = "absolute", interval = "delta")
+ED50.A66 <- ED(model.W2.2, 0.5, clevel = "A66", type = "absolute", interval = "delta")
 
 
 ```
@@ -130,22 +127,21 @@ ED50.A66 <- ED(model.W2.3, (summary(model.W2.3)$coefficients[4, 1] * 0.5), cleve
 #EDcomp(model.W1.3, c(50, 50), type = "relative", interval = "none", reverse = F)
 
 
-EDcomp(model.W2.3, c((summary(model.W2.3)$coefficients[4, 1] * 0.5),
-                     (summary(model.W2.3)$coefficients[3, 1] * 0.5)), 
+EDcomp(model.W2.2, c(0.5, 0.5), 
        compMatch = c("A92", "A66"), type = "absolute", interval = "none", reverse = T)
 
 
 
  # Comparing b parameter (slope)
-compParm(model.W1.3, strVal = "b", operator = "-")
+compParm(model.W2.2, strVal = "b", operator = "-")
 
 
 # Comparing d parameter (upper limit)
-compParm(model.W1.3, strVal = "d", operator = "-")
+#compParm(model.W2.2, strVal = "d", operator = "-")
 
 
 # Comparing e parameter (Infletion Point)
-compParm(model.W1.3, strVal = "e", operator = "-") # Remember that for assymetric models, the paramenter"e" does not reflect the ED50. 
+compParm(model.W2.2, strVal = "e", operator = "-") # Remember that for assymetric models, the paramenter"e" does not reflect the ED50. 
 
 
 ```
@@ -163,26 +159,25 @@ tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD
 par(mar = c(5,5,1,1))
 
 
-plot(model.W2.3,
+plot(model.W2.2,
      type = "average",
      xlab = expression(paste("Flumioxazin rate (g ai ha"^-1, ")")),
-     ylab = expression(paste("Count Reduction (%)")),
-     ylim = c(0, 150),
+     ylab = expression(paste("Plant Count Reduction (%)")),
+     ylim = c(0, 1),
      col = c("red", "darkgreen"),
      pch = c(19, 17),
      cex = 1.5,
      cex.axis = 1.3,
      cex.lab = 1.9,
      cex.legend = 2.0,
-     legendPos = c(800, 150),
+     legendPos = c(800, 0.8),
      lwd = 1.5)
 
 
 
 points(x = c(ED50.A92[1, 1], 
              ED50.A66[1, 1]),
-       y = c((summary(model.W2.3)$coefficients[3, 1] * 0.5), 
-             (summary(model.W2.3)$coefficients[4, 1] * 0.5)),
+       y = c(0.5, 0.5),
        pch = 8,
        cex = 1.3)
 
