--- a/PhD/PhD Projects/Waterhemp/Bill Stangel_A92/2023/PRE/Fomesafen/A92_PRE_Fome_DR Countred.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Bill Stangel_A92/2023/PRE/Fomesafen/A92_PRE_Fome_DR Countred.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Waterhemp PRE A92 Fomesafen DR Counts"
+title: "Waterhemp PRE A92 Flumioxazin DR Counts"
 author: "Felipe Faleco"
-date: "08/07/2024"
+date: "03/13/2024"
 output:
   html_document:
     df_print: paged
@@ -24,7 +24,7 @@ library(dplyr)
 
 ```{r}
 
-data <- read.csv("Data Sheet_A92_Fomesafen PRE.csv")
+data <- read.csv("Data Sheet_A92_Flumioxazin PRE.csv")
 
 str(data)
 
@@ -34,11 +34,11 @@ fun <- function(x){
   c( mean = mean(x, na.rm = T), VAR = var(x, na.rm = T), SD = sd(x, na.rm = T), SE = std.error(x, na.rm = T), n = length(x))
 }
 
-summary.A92 <- summaryBy(cbind(count, biomass) ~ rate + pop, data = subset(data, pop=="A92"),
+summary.A92 <- summaryBy(cbind(countred, biored) ~ rate + pop, data = subset(data, pop=="A92"),
           FUN=fun)
 
 
-summary.A66 <- summaryBy(cbind(count, biomass) ~ rate + pop, data = subset(data, pop=="A66"),
+summary.A66 <- summaryBy(cbind(countred, biored) ~ rate + pop, data = subset(data, pop=="A66"),
           FUN=fun)
 
 
@@ -50,7 +50,7 @@ summary.A66 <- summaryBy(cbind(count, biomass) ~ rate + pop, data = subset(data,
 
 ```{r}
 
-model.LL.4 <- drm(count ~ rate, pop, fct = LL.4(),  data = data, type = "continuous")
+model.LL.4 <- drm(countred ~ rate, pop, fct = LL.4(),  data = data, type = "continuous")
 
 
                 
@@ -87,20 +87,19 @@ mselect(model.LL.4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL.4(), 
 
 
 
-model.W1.3 <- drm(count ~ rate, pop, fct = W1.3(),  data = data, type = "continuous")
+model.W2.2 <- drm(countred ~ rate, pop, fct = W2.2(),  data = data, type = "continuous")
 
-plot(fitted(model.W1.3), residuals(model.W1.3))
+plot(fitted(model.W2.2), residuals(model.W2.2))
 
-qqnorm(residuals(model.W1.3))
-
-
-modelFit(model.W1.3)
-
-summary(model.W1.3)
+qqnorm(residuals(model.W2.2))
 
 
+modelFit(model.W2.2)
 
-anova(model.W1.3, model.LL.4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
+summary(model.W2.2)
+
+
+anova(model.W2.2, model.LL.4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
 
 ```
 
@@ -113,9 +112,9 @@ anova(model.W1.3, model.LL.4) # p-value > 0.05 means that there is no difference
 #ED(model.W1.3, c(50), type = "relative", interval = "delta")
 
 
-ED50.A92 <- ED(model.W1.3, (summary(model.W1.3)$coefficients[3, 1] * 0.5), clevel = "A92", type = "absolute", interval = "delta")
+ED50.A92 <- ED(model.W2.2, 0.5, clevel = "A92", type = "absolute", interval = "delta")
 
-ED50.A66 <- ED(model.W1.3, (summary(model.W1.3)$coefficients[4, 1] * 0.5), clevel = "A66", type = "absolute", interval = "delta")
+ED50.A66 <- ED(model.W2.2, 0.5, clevel = "A66", type = "absolute", interval = "delta")
 
 
 ```
@@ -128,22 +127,21 @@ ED50.A66 <- ED(model.W1.3, (summary(model.W1.3)$coefficients[4, 1] * 0.5), cleve
 #EDcomp(model.W1.3, c(50, 50), type = "relative", interval = "none", reverse = F)
 
 
-EDcomp(model.W1.3, c((summary(model.W1.3)$coefficients[4, 1] * 0.5),
-                     (summary(model.W1.3)$coefficients[3, 1] * 0.5)), 
+EDcomp(model.W2.2, c(0.5, 0.5), 
        compMatch = c("A92", "A66"), type = "absolute", interval = "none", reverse = T)
 
 
 
-# Comparing b parameter (slope)
-compParm(model.W1.3, strVal = "b", operator = "-")
+ # Comparing b parameter (slope)
+compParm(model.W2.2, strVal = "b", operator = "-")
 
 
 # Comparing d parameter (upper limit)
-compParm(model.W1.3, strVal = "d", operator = "-")
+#compParm(model.W2.2, strVal = "d", operator = "-")
 
 
 # Comparing e parameter (Infletion Point)
-compParm(model.W1.3, strVal = "e", operator = "-") # Remember that for assymetric models, the paramenter"e" does not reflect the ED50. 
+compParm(model.W2.2, strVal = "e", operator = "-") # Remember that for assymetric models, the paramenter"e" does not reflect the ED50. 
 
 
 ```
@@ -154,33 +152,32 @@ compParm(model.W1.3, strVal = "e", operator = "-") # Remember that for assymetri
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Bill Stangel_A92/2023/PRE/Fomesafen/A92_PRE_Fome_DR Counts.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Bill Stangel_A92/2023/PRE/Flumioxazin/A92_PRE_Flumi_DR Countred.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
 par(mar = c(5,5,1,1))
 
 
-plot(model.W1.3,
+plot(model.W2.2,
      type = "average",
-     xlab = expression(paste("Fomesafen rate (g ai ha"^-1, ")")),
-     ylab = expression(paste("Plant Count (plant pot"^-1, ")")),
-     ylim = c(0, 40),
+     xlab = expression(paste("Flumioxazin rate (g ai ha"^-1, ")")),
+     ylab = expression(paste("Plant Count Reduction (%)")),
+     ylim = c(0, 1),
      col = c("red", "darkgreen"),
      pch = c(19, 17),
      cex = 1.5,
      cex.axis = 1.3,
      cex.lab = 1.9,
      cex.legend = 2.0,
-     legendPos = c(800, 40.0),
+     legendPos = c(800, 0.8),
      lwd = 1.5)
 
 
 
 points(x = c(ED50.A92[1, 1], 
              ED50.A66[1, 1]),
-       y = c((summary(model.W1.3)$coefficients[3, 1] * 0.5), 
-             (summary(model.W1.3)$coefficients[4, 1] * 0.5)),
+       y = c(0.5, 0.5),
        pch = 8,
        cex = 1.3)
 
