--- a/PhD/PhD Projects/Waterhemp/Bill Stangel_A92/2023/PRE/Sulfentrazone/A92_PRE_Sulf_DR Percentcounts.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Bill Stangel_A92/2023/PRE/Sulfentrazone/A92_PRE_Sulf_DR Percentcounts.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Waterhemp PRE A92 Fomesafen DR Counts"
+title: "Waterhemp PRE A92 Sulfentrazone DR Percentcounts"
 author: "Felipe Faleco"
 date: "08/07/2024"
 output:
@@ -24,7 +24,7 @@ library(dplyr)
 
 ```{r}
 
-data <- read.csv("Data Sheet_A92_Fomesafen PRE.csv")
+data <- read.csv("Data Sheet_A92_Sulfentrazone PRE.csv")
 
 str(data)
 
@@ -34,11 +34,11 @@ fun <- function(x){
   c( mean = mean(x, na.rm = T), VAR = var(x, na.rm = T), SD = sd(x, na.rm = T), SE = std.error(x, na.rm = T), n = length(x))
 }
 
-summary.A92 <- summaryBy(cbind(count, biomass) ~ rate + pop, data = subset(data, pop=="A92"),
+summary.A92 <- summaryBy(cbind(percentcount, percentbio) ~ rate + pop, data = subset(data, pop=="A92"),
           FUN=fun)
 
 
-summary.A66 <- summaryBy(cbind(count, biomass) ~ rate + pop, data = subset(data, pop=="A66"),
+summary.A66 <- summaryBy(cbind(percentcount, percentbio) ~ rate + pop, data = subset(data, pop=="A66"),
           FUN=fun)
 
 
@@ -50,7 +50,7 @@ summary.A66 <- summaryBy(cbind(count, biomass) ~ rate + pop, data = subset(data,
 
 ```{r}
 
-model.LL.4 <- drm(count ~ rate, pop, fct = LL.4(),  data = data, type = "continuous")
+model.LL.4 <- drm(percentcount ~ rate, pop, fct = LL.4(),  data = data, type = "continuous")
 
 
                 
@@ -87,7 +87,7 @@ mselect(model.LL.4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL.4(), 
 
 
 
-model.W1.3 <- drm(count ~ rate, pop, fct = W1.3(),  data = data, type = "continuous")
+model.W1.3 <- drm(percentcount ~ rate, pop, fct = W1.3(),  data = data, type = "continuous")
 
 plot(fitted(model.W1.3), residuals(model.W1.3))
 
@@ -97,7 +97,6 @@ qqnorm(residuals(model.W1.3))
 modelFit(model.W1.3)
 
 summary(model.W1.3)
-
 
 
 anova(model.W1.3, model.LL.4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
@@ -154,7 +153,7 @@ compParm(model.W1.3, strVal = "e", operator = "-") # Remember that for assymetri
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Bill Stangel_A92/2023/PRE/Fomesafen/A92_PRE_Fome_DR Counts.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Bill Stangel_A92/2023/PRE/Sulfentrazone/A92_PRE_Sulf_DR Percentcounts.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
@@ -163,16 +162,16 @@ par(mar = c(5,5,1,1))
 
 plot(model.W1.3,
      type = "average",
-     xlab = expression(paste("Fomesafen rate (g ai ha"^-1, ")")),
-     ylab = expression(paste("Plant Count (plant pot"^-1, ")")),
-     ylim = c(0, 40),
+     xlab = expression(paste("Sulfentrazone rate (g ai ha"^-1, ")")),
+     ylab = expression(paste("Plant Count (%)")),
+     ylim = c(0, 1),
      col = c("red", "darkgreen"),
      pch = c(19, 17),
      cex = 1.5,
      cex.axis = 1.3,
      cex.lab = 1.9,
      cex.legend = 2.0,
-     legendPos = c(800, 40.0),
+     legendPos = c(1500, 1.0),
      lwd = 1.5)
 
 
