--- a/PhD/PhD Projects/Waterhemp/Bill Stangel_A92/2023/PRE/Flumioxazin/A92_PRE_Flumi_DR Percentcounts.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Bill Stangel_A92/2023/PRE/Flumioxazin/A92_PRE_Flumi_DR Percentcounts.Rmd
@@ -117,6 +117,11 @@ ED50.A92 <- ED(model.W1.2, 0.5 , clevel = "A92", type = "absolute", interval = "
 ED50.A66 <- ED(model.W1.2, 0.5, clevel = "A66", type = "absolute", interval = "delta")
 
 
+
+ED50.A92 <- ED(model.W1.2, 0.1 , clevel = "A92", type = "absolute", interval = "delta")
+
+ED50.A66 <- ED(model.W1.2, 0.1, clevel = "A66", type = "absolute", interval = "delta")
+
 ```
 
 
@@ -128,6 +133,11 @@ ED50.A66 <- ED(model.W1.2, 0.5, clevel = "A66", type = "absolute", interval = "d
 
 
 EDcomp(model.W1.2, c(0.5, 0.5), 
+       compMatch = c("A92", "A66"), type = "absolute", interval = "none", reverse = T)
+
+
+
+EDcomp(model.W1.2, c(0.1, 0.1), 
        compMatch = c("A92", "A66"), type = "absolute", interval = "none", reverse = T)
 
 
