--- a/PhD/PhD Projects/Waterhemp/Bill Stangel_A92/2023/PRE/Fomesafen/A92_PRE_Fome_DR Percentcounts_outliers.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Bill Stangel_A92/2023/PRE/Fomesafen/A92_PRE_Fome_DR Percentcounts_outliers.Rmd
@@ -163,7 +163,7 @@ par(mar = c(5,5,1,1))
 plot(model.W1.2,
      type = "average",
      xlab = expression(paste("Fomesafen rate (g ai ha"^-1, ")")),
-     ylab = expression(paste("Percent plant count (x 100%)")),
+     ylab = expression(paste("Plant count (x 100%)")),
      ylim = c(0, 1),
      col = c("red", "darkgreen"),
      pch = c(19, 17),
